<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity"
    tools:deviceIds="wear"
    android:background="@color/back">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_boxedEdges="all">

        <TextView
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/app"
            android:textColor="@color/text"
            android:textSize="13dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="12dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/text"
            android:layout_marginTop="35dp"/>
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/email"
            android:layout_width="160dp"
            android:textColorHint="@color/hint"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:textSize="12dp"
            android:hint="@string/email_hint"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="12dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/text"
            android:layout_marginTop="85dp"/>
        <EditText
            android:inputType="textPassword"
            android:id="@+id/pass"
            android:layout_width="160dp"
            android:textColorHint="@color/hint"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="10dp"
            android:textSize="12dp"
            android:hint="@string/writePas"/>

        <Button
            android:onClick="perehod"
            android:id="@+id/singin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="140dp"
            android:text="@string/log"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@color/text"/>
    </FrameLayout>
</androidx.wear.widget.BoxInsetLayout>